Changes for 1.0alpha7:

 - fullscreen mode for Network Maps and graphs

 - fixed bug with getting processor load on Linux
 - added /upgrades/dbpatches/1.0alpha6_to_1.0alpha7
 - changes in manual.txt
 - fixed bug with lost status of trigger
 - added file frontends/php/about.html
 - link can be deleted now (network maps)
 - host icons in network maps became clickable
 - function NODATA is no longer supported
 - fixed get_minnextcheck
 - all these tables are added to PostgreSQL
 - added table graphs_items
 - lowered default values for triggers
 - added file frontends/php/chart2.html
 - added file frontends/php/charts.html
 - added file frontends/php/graph.html

 - added file frontends/php/graphs.html
 - added file frontends/php/images/sysmaps/host.png
 - added file frontends/php/map.html
 - added file frontends/php/maps.html
 - added file frontends/php/sysmap.html
 - added file frontends/php/sysmaps.html
 - added table sysmap
 - added table sysmaps

Changes for 1.0alpha6:

 - error in PHP frontend in Host definition form 

Changes for 1.0alpha5:

 - changes in manual.txt
 - support for SNMP agents !
 - zabbix_sucker forks N (default=10) copies to run in parallel mode. Monitoring of hundreds of servers is reality ! 
 - "netstat -ln|grep tcp" was replaced by more efficient "netstat -lnt"
 - support for macros in email subject and body
 - fixed zabbix_trapper. Added update_functions (itemid).
 - finally (!) removed include/sysinfo.h
 - source code became more structured
 - call to perror was changed to syslog where necessary 
 - zabbix_sucker will not print "Spent x seconds ..." to syslog
 
Changes for 1.0alpha4:

 - fixed EXECUTE function in sysinfo.c
   It will return FAIL when command not found.
 - added report of Status of Zabbix - report1.html
 - added Availability Report - report2.html
 - added hints on choosing right DB (PostgreSQL vs MySQL) to manual.txt
 - added section on reports in manual.txt
 - fixed "undefined $register" and other warnings in media.html