@@ -30,6 +30,7 @@
 		elseif($register=="delete")
 		{
 			delete_media( $mediaid );
+			unset($mediaid);
 		}
 	}
 ?>
